force-app/main/default/objects/Agent_Suggestion__c/Agent_Suggestion__c.object-meta.xml
<CustomObject>
    <description>AI-generated cross-cloud automation suggestions produced by CrossCloudAnalysisQueueable. Status lifecycle: Pending to Accepted or Dismissed. 72-hour TTL enforced via Expires_At__c.</description>
    <label>Agent Suggestion</label>
    <nameField>
        <label>Suggestion Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>