force-app/main/default/objects/Agent_Suggestion__c/fields/Agent_Memory__c.field-meta.xml
<CustomField>
    <fullName>Agent_Memory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the parent Agent_Memory__c. Accept +10 strength. Dismiss -5 decay.</description>
    <label>Agent Memory</label>
    <referenceTo>Agent_Memory__c</referenceTo>
    <relationshipLabel>Suggestions</relationshipLabel>
    <relationshipName>Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>