force-app/main/default/objects/Agent_Suggestion__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>AI confidence percentage 0-99.9%. Suggestions below 40% are filtered before insert.</description>
    <label>Confidence Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>