force-app/main/default/objects/Agent_Suggestion__c/fields/Dismissed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_Reason__c</fullName>
    <description>Free-text reason captured when user dismisses the suggestion. Analytics signal for dismissal patterns.</description>
    <label>Dismissed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>