force-app/main/default/objects/Agent_Suggestion__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <description>18-char record ID of the entity this suggestion is about.</description>
    <label>Entity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>