force-app/main/default/objects/Agent_Suggestion__c/fields/Expiration_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Timestamp__c</fullName>
    <description>Timestamp after which the suggestion is considered expired (created + 72 hours)</description>
    <inlineHelpText>System-set to 72 hours after creation</inlineHelpText>
    <label>Expiration Timestamp</label>
    <type>DateTime</type>
</CustomField>