force-app/main/default/objects/Agent_Suggestion__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description>TTL timestamp. Set to System.now().addHours(72) on insert. Filters stale suggestions from selector.</description>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>