force-app/main/default/objects/Agent_Suggestion__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <description>Developer name of the Salesforce Flow to invoke on acceptance via FlowExecutionQueueable.</description>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>