force-app/main/default/objects/Agent_Suggestion__c/fields/Suggestion_Body__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Body__c</fullName>
    <description>Natural-language explanation of the suggested automation including intent signals.</description>
    <label>Suggestion Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>