force-app/main/default/objects/Agent_Suggestion__c/fields/Target_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Target_Cloud__c</fullName>
    <description>The cloud where the suggested automation should execute. Used for deduplication.</description>
    <label>Target Cloud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
                <isActive>false</isActive>
                <label>Data</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Platform</fullName>
                <isActive>false</isActive>
                <label>Platform</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <isActive>false</isActive>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Service</fullName>
                <isActive>false</isActive>
                <label>Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>